# License_Tool

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  HOW-TO-USE-SUGGEST-LICENSE.md  LICENSE  README.md  THIRD_PART_NOTICE.txt  blackbox_tester.py  docker-compose.yml  package-lock.json  pyproject.toml  pytest.ini  requirements.txt  start-all-services.ps1  start-container.sh
.github/workflows/: ci.yml
app/: .env  __init__.py  main.py
app/api/: analysis.py
app/controllers/: __init__.py  analysis.py
app/core/: __init__.py  config.py
app/models/: __init__.py  schemas.py
app/services/: __init__.py  analysis_workflow.py  code_generator.py  compatibility.py  download_service.py  github_client.py  license_rules.json  llm_helper.py  patterns_to_ignore.json  report_service.py  scancode_service.py  suggestion.py
app/services/compatibility/: checker.py  compat_utils.py  evaluator.py  matrix.py  parser_spdx.py
app/services/dowloader/: download_service.py
app/services/downloader/: download_service.py
app/services/github/: Encrypted_Auth_Info.py  github_client.py
app/services/llm/: code_generator.py  license_recommender.py  ollama_api.py  suggestion.py
app/services/scanner/: detection.py  filter.py  license_order_permissive.json  license_ranking.py  license_rules.json  main_spdx_utilities.py  patterns_to_ignore.json
app/utility/: __init__.py  config.py
docs/: LICENSE_SUGGESTION_GUIDE.md  THIRD_PARTY_NOTICE
features/: environment.py
frontend/: .gitignore  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  config.js  index.css  main.jsx
frontend/src/components/: LicenseSuggestionForm.jsx  TripleToggleSwitch.css  TripleToggleSwitch.jsx
frontend/src/pages/: Callback.jsx  Home.jsx
tests/: api_availability_check.py  conftest.py
tests/acceptance/features/: download.feature  environment.py  error_handling.feature  license_filtering.feature  license_suggestion.feature  repository_analysis.feature  zip_upload.feature
tests/acceptance/features/steps/: analysis_steps.py  download_steps.py  error_steps.py  license_filtering_steps.py  suggestion_steps.py  zip_upload_steps.py
tests/api/: test_analysis.py  test_analysis_integrations.py  test_endpoints.py  test_endpoints_unit.py  test_license_suggestion.py  test_new_scenarios_integrations.py  test_regenerate_download.py  test_regenerate_download_integration.py  test_scenarios_mix_licenses.py
tests/integration/: test_analysis_integration.py  test_endpoints_integration.py  test_new_scenarios_integration.py  test_scenarios_mix_licenses_integration.py  test_suggestion_integration.py
tests/security/: SECURITY_SUMMARY.md  SECURITY_TESTING_REPORT.md  test_security.py
tests/services/: test_analysis_workflow_unit.py  test_checker_unit.py  test_compat_utils_unit.py  test_detection_unit.py  test_download_unit.py  test_encrypted_auth_info_unit.py  test_evaluator_unit.py  test_filter_unit.py  test_github.py  test_github_unit.py  test_license_ranking_unit.py  test_license_suggestion_unit.py  test_llm_generator_and_suggestions_unit.py  test_main_spdx_utilities.py  test_main_spdx_utilities_unit.py  test_matrix_unit.py  test_ollama_api_unit.py  test_parser_spdx_unit.py
tests/unit/: test_analysis_workflow_unit.py  test_checker.py  test_checker_unit.py  test_compat_utils.py  test_compat_utils_unit.py  test_detection_unit.py  test_download_unit.py  test_endpoints.py  test_evaluator.py  test_evaluator_unit.py  test_filter_unit.py  test_github_unit.py  test_license_ranking_unit.py  test_license_suggestion_unit.py  test_llm_generator_and_suggestions_unit.py  test_main_spdx_utilities_unit.py  test_matrix.py  test_matrix_unit.py  test_ollama_api_unit.py  test_parser_spdx.py  test_parser_spdx_unit.py  test_spdx.py
