[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "license-tool"
version = "0.1.0"
description = "Tool per l'analisi e la compatibilità delle licenze software"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Riccio Giuseppe, Simeone Lucia, Medugno Vittoria, Capone Antonella, Liparulo Elisa"},
]
# Correzione License Warning: usiamo il campo 'license' invece del classifier
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "fastapi~=0.121.1",
    "uvicorn[standard]",
    "gitpython~=3.1.45",
    "python-dotenv~=1.2.1",
    "requests~=2.32.5",
    "license-expression",
    "pydantic~=2.12.4",
    "httpx~=0.28.1",
    "pymongo~=4.15.4",
    "cryptography~=46.0.3",
    "python-multipart~=0.0.20",
]

[project.urls]
"Homepage" = "https://github.com/giusk10/license_tool"
"Bug Tracker" = "https://github.com/giusk10/license_tool/issues"

[project.optional-dependencies]
dev = [
    "pytest~=9.0.1",
    "pytest-cov~=7.0.0",
    "pytest-mock~=3.15.1",
    "pytest-asyncio~=1.3.0",
    "pylint",
    "pre-commit",
]

# --- NUOVA SEZIONE FONDAMENTALE ---
# Dice a setuptools di includere solo 'app' e ignorare 'frontend'
[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["frontend*", "tests*"]

# --- Configurazione Testing ---
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v --cov=app"
testpaths = ["tests"]
python_files = "test_*.py"
pythonpath = "."


# --- Configurazione Static Analysis ---
[tool.pylint.main]
# Cambia source-roots per puntare alla root del progetto
source-roots = ["."]

# Aggiungi questo hook per forzare l'inclusione della directory corrente
init-hook = "import sys; sys.path.append('.')"

[tool.pylint."MESSAGES CONTROL"]
disable = ["all"]
enable = ["E", "F"]