[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "license-tool"
version = "0.1.0"
description = "Tool for software license analysis and compatibility"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Riccio Giuseppe, Simeone Lucia, Medugno Vittoria, Capone Antonella, Liparulo Elisa"},
]
# License Warning Fix: using the 'license' field instead of the classifier
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "fastapi~=0.121.1",
    "uvicorn[standard]",
    "gitpython~=3.1.45",
    "python-dotenv~=1.2.1",
    "requests~=2.32.5",
    "license-expression",
    "pydantic~=2.12.4",
    "httpx~=0.28.1",
    "cryptography~=46.0.3",
    "python-multipart~=0.0.20",
]

[project.urls]
"Homepage" = "https://github.com/giusk10/license_tool"
"Bug Tracker" = "https://github.com/giusk10/license_tool/issues"

[project.optional-dependencies]
dev = [
    "pytest~=9.0.1",
    "pytest-cov~=7.0.0",
    "pytest-mock~=3.15.1",
    "pytest-asyncio~=1.3.0",
    "pylint",
    "pre-commit",
]

# Tells setuptools to include only 'app' and ignore 'frontend' and 'tests'
[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["frontend*", "tests*"]

# --- Testing Configuration ---
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v --cov=app"
testpaths = ["tests"]
python_files = "test_*.py"
pythonpath = "."

# --- Static Analysis Configuration ---
[tool.pylint.main]
# Change source-roots to point to the project root
source-roots = ["."]
# Add this hook to force current directory inclusion
init-hook = "import sys; sys.path.append('.')"
# Ignoring tests for now as they are not properly factored yet
ignore = ["tests"]

[tool.pylint."MESSAGES CONTROL"]
disable = ["all"]
enable = ["E", "F"]